@@ -578,7 +578,7 @@ void FsDevice::copySongToResult(int status)
     } else {
         currentSong.file=currentDestFile.mid(MPDConnection::self()->getDetails().dir.length());
         QString origPath;
-        if (MPDConnection::self()->isMopdidy()) {
+        if (MPDConnection::self()->isMopidy()) {
             origPath=currentSong.file;
             currentSong.file=Song::encodePath(currentSong.file);
         }
