@@ -80,7 +80,7 @@ void OnlineDevice::downloadFinished()
 
             currentSong.file=currentDestFile.mid(MPDConnection::self()->getDetails().dir.length());
             QString origPath;
-            if (MPDConnection::self()->isMopdidy()) {
+            if (MPDConnection::self()->isMopidy()) {
                 origPath=currentSong.file;
                 currentSong.file=Song::encodePath(currentSong.file);
             }
