@@ -58,6 +58,7 @@
     mimic better Gtk support.
 43. Japanese translation.
 44. Allow single-key shortcuts.
+45. Improve Mopidy support.
 
 2.0.1
 -----
